add makefile for conda

--- a/.gitignore
+++ b/.gitignore
@@ -103,6 +103,7 @@ __marimo__/
 # 1️⃣ Ignore everything by default
 *
 !Makefile.sample
+!Makefile.conda_sample
 
 # 2️⃣ Re-include directories so we can traverse them
 !*/
