--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,20 @@
 # python==3.10.19
-torch==2.1.2 --index-url https://download.pytorch.org/whl/cu118
-torchvision==0.16.2 --index-url https://download.pytorch.org/whl/cu118
-torchaudio==2.1.2 --index-url https://download.pytorch.org/whl/cu118
-numpy==1.26.4
+# torch==2.1.2 --index-url https://download.pytorch.org/whl/cu118
+# torchvision==0.16.2 --index-url https://download.pytorch.org/whl/cu118
+# torchaudio==2.1.2 --index-url https://download.pytorch.org/whl/cu118
+# numpy==1.26.4
 
 # python==3.11.14
 # torch==2.8.0 --index-url https://download.pytorch.org/whl/cu128
 # torchvision==0.23.0 --index-url https://download.pytorch.org/whl/cu128
 # torchaudio==2.8.0 --index-url https://download.pytorch.org/whl/cu128
 # numpy==2.3.3
+
+# python==3.12.3
+torch==2.10.0 --index-url https://download.pytorch.org/whl/cu131
+torchvision==0.25.0 --index-url https://download.pytorch.org/whl/cu131
+torchaudio==2.10.0 --index-url https://download.pytorch.org/whl/cu131
+numpy==2.3.3
 
 safetensors==0.6.2
 packaging==25.0
